changed spacing issues and aligned text properly

--- a/public/screen.css
+++ b/public/screen.css
@@ -18,17 +18,21 @@ body {
   align-items: center;
   width: 60%;
   text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
 
+section div {
+  text-align: left;
+}
+
+.paragraph-container {
+  margin-bottom: 45px;
 }
 
 .section-display {
   background-color: white;
   display: flex;
   flex-flow: row
-}
-
-.paragraph-container {
-  margin-bottom: 45px;
 }
 
 .left-align-div {
@@ -38,9 +42,19 @@ body {
   padding: .8rem 0 0 0;
   border: lightblue 1.5px solid;
   margin: 15px;
-  padding: 20px;
+  padding: 10px;
 }
 
+h2 {
+  font-size: 1.3rem;
+}
+
+
+h2,
+p {
+  text-align: left;
+
+}
 
 
 body header ul {
@@ -49,6 +63,7 @@ body header ul {
   text-decoration: underline;
   list-style: none;
   color: white;
+
 }
 
 body header div h1 {
@@ -60,11 +75,11 @@ body header div h1 {
 
 #footer-display {
 
-  background-color: tan;
+  background-color: antiquewhite;
   padding: .7rem 0;
+  text-decoration: underline;
 
 }
-
 
 footer div ul {
   display: flex;
@@ -73,8 +88,6 @@ footer div ul {
   list-style: none;
 
 }
-
-
 
 img {
   height: 175px;
